// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.pd.persistence;

option java_multiple_files = true;
option java_api_version = 2;
option java_package = "com.google.android.as.oss.pd.persistence";

// The metadata persisted for each client of protected download, required by
// the download protocol or for additional metrics
message ClientPersistentState {
  // Encrypted key set used to encrypt/decrypt the communication with Google
  // servers.
  bytes external_key_set = 1;

  // Blob continuation token. Should be replaced on successful download,
  // read and included with the next download request.
  bytes page_token = 2;

  // Timestamp of last successful download.
  int64 last_completion_time_millis = 4;

  reserved 3;
}
